pequena alteração no front, para o input, com form

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <h1>ToDo List</h1>
         <hr>
         <div class="inputSection">
-            <input type="text" id="atividade" placeholder="Escreva sua atividade">
-            <button type="submit">Enviar</button>
+            <form>
+                <input type="text" id="atividade" placeholder="Escreva sua atividade" required>
+                <button type="submit">Enviar</button>
+            </form>
         </div>
         <hr>
         <div class="activitie">
